<resources>
    <string name="app_name">New_NDS_Study</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码</string>
    <string name="else_login">其他登录方式</string>
    <string name="please_input_number">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="name">姓名</string>
    <string name="phonenumber">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="algin_input_password">再次输入密码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="password_ask_for">密码必须大于八位数</string>
    <string name="find_password">找回密码</string>
    <string name="next">下一步</string>
    <string name="set">设置</string>
    <string name="full_screen">全屏</string>
    <string name="one_screen">一屏</string>
    <string name="two_screen">二屏</string>
    <string name="three_screen">三屏</string>
    <string name="beginclass">开 始 上 课</string>
    <string name="bigglass">放大镜</string>
    <string name="home_page">首页</string>
    <string name="get_back">返回</string>
    <string name="laster">探照灯</string>
    <string name="my">我的</string>
    <string name="this_classname">本堂课的名称</string>
    <string name="title_eachclass">HTML+CSS基础课程</string>
    <string name="tlakitem_delete">删除</string>
    <string name="tlakstr_zan">赞</string>
    <string name="tlakedit_string">我也有话说</string>
    <string name="title_eachclass_right">关于课程</string>
    <string name="NetWork_Err">检查网络</string>
</resources>
