<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/regist_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/icon_return_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp" />
    </RelativeLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D9D9D9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regist_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/regist_ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/regist_ed_authcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_code" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/get_auth_code"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_yellow"
                android:textSize="15sp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <EditText
            android:id="@+id/regist_ed_pass_ask_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_ask_for" />

        <EditText
            android:id="@+id/regist_ed_algin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/algin_input_password" />

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/register"
            android:textColor="@color/color_yellow" />

    </LinearLayout>


</LinearLayout>
