<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/forget_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginLeft="@dimen/sp_10"
        android:gravity="center_vertical"
        android:text="@string/login"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        android:text="@string/find_password"/>

</RelativeLayout>

    <View
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="#D9D9D9"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical">
    <EditText
        android:id="@+id/forget_ed_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/forget_ed_authcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_code" />
            <TextView
                android:id="@+id/forget_tv_getauthcode"
                android:layout_width="wrap_content"
                android:text="@string/get_auth_code"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/color_yellow"
                android:textSize="@dimen/sp_15"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/forget_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/login_button_bg"
            android:text="@string/next"
            android:textColor="@color/color_yellow" />
    </LinearLayout>

</LinearLayout>
