<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15sp"
                android:text="@string/register"
                android:textColor="@color/color_blue"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/login_tv_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@mipmap/logo" />


        <EditText
            android:id="@+id/login_account_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:hint="@string/please_input_number"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/login_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_password_layout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/color_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="match_parent"
            android:layout_height="37sp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forget_password" />


    </LinearLayout>

