<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginLeft="@dimen/dp_3"
        android:layout_width="@dimen/dp_12"
        android:layout_height="@dimen/dp_12"
        android:id="@+id/tlakitem_icon"
        android:src="@drawable/ic_loading_rotate"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="测试"
            android:id="@+id/tlakNick_name"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tlakItem_cotent"
            android:text="阿二姑婆价格【卡片柜【卡牌【高考和奖品【爱哭鬼胖娃港口哇皮卡【‘’"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:text="@string/app_name"
                android:id="@+id/tlakCotent_size"
                android:background="@drawable/pinglun_shape"
                />
<TextView
    android:id="@+id/tlakItem_time"
    android:textColor="@color/color_gray"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/sp_14"
    android:text="@string/app_name"
    android:layout_marginLeft="@dimen/dp_3"
    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="#187BED"
                android:text="@string/tlakitem_delete"
                android:layout_marginLeft="@dimen/dp_3"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_marginRight="@dimen/dp_3"
                >


            <ImageView
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:src="@drawable/tlakadapterok_im"
                android:id="@+id/tlakItem_zan"
                />
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/tlakstr_zan"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
<View
    android:layout_marginTop="@dimen/dp_10"
    android:layout_width="match_parent"
    android:id="@+id/tlakFirst_view"
    android:layout_height="1dp"
    android:background="@color/color_gray"
    />
</LinearLayout>